# weirdlib

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  TidyAllCode.ps1  TidyAllCode.py
apps/: CMakeLists.txt
apps/src/extension_fix/: main.cpp  messages.hpp  param_process.cpp  param_process.hpp
benchmark/: CMakeLists.txt  bench_cases.cpp  bench_cases.hpp  bench_common.hpp  bench_load.cpp  bench_load.hpp  wlibbench.cpp
benchmark/bench_files/: ATTRIBUTION  loremipsum-thicc.txt
cmake_extra/: compiler_settings.cmake  modules.cmake
docs/: CMakeLists.txt  Doxyfile
include/: cpu_detection.hpp  weirdlib.hpp  weirdlib_anxiety.hpp  weirdlib_bitops.hpp  weirdlib_containers.hpp  weirdlib_crypto.hpp  weirdlib_fileops.hpp  weirdlib_image.hpp  weirdlib_math.hpp  weirdlib_parsers.hpp  weirdlib_simdhelper.hpp  weirdlib_string.hpp  weirdlib_traits.hpp  weirdlib_utility.hpp  weirdlib_vecmath.hpp
include/cuda/: weirdlib_cuda_image.hpp
src/: CMakeLists.txt  bitop.cpp  common.cpp  common.hpp  cryptography.cpp  stringops.cpp  weirdlib.cpp
src/crypto/: base64.cpp  crc.cpp  crc_tables.hpp  cryptography.cpp  secure_int.cpp  sha1.cpp
src/cuda/: cuda_image_aos.cu  cuda_image_soa.cu  cuda_mask_intellisense.cuh  cuda_utils.cuh  img_grayscale_convert.cu  img_histogram.cu  img_negative.cu  img_random_aos.cu  img_random_soa.cu
src/file_ops/: extension_change.cpp  extension_filetype_mapping.cpp  magic_numbers.hpp  type_detection.cpp  type_detection_detail.hpp
src/img_loaders/: bmp_load.cpp  image_format_loaders.hpp  img_loader_exceptions.hpp  pam_load.cpp  pfm_load.cpp  pnm_load.cpp  pnm_pam_load.cpp  tga_load.cpp
src/img_process/: image_aos.cpp  image_convert.cpp  image_detail.cpp  image_invert.cpp  image_layout_convert.cpp  image_psnr.cpp  image_soa.cpp  imgconvert.cpp  imgflip.cpp  imgload.cpp  imgprocess.cpp  stb_impl.cpp
src/parsers/: comfyg.cpp  cuesheet.cpp  parser_common.hpp
src/stresstest/: anxiety_heavy.cpp  anxiety_sqrt.cpp
src/stringops/: others.cpp  split.cpp  strchr.cpp  strcompare.cpp  strlen.cpp  strparse.cpp  strpbrk.cpp  strstr.cpp
src/utility/: denormalize.cpp
src/vecmath/: cross_product.cpp  distance.cpp  dot_product.cpp  length.cpp  normalize.cpp  reflect.cpp  refract.cpp
tests/: CMakeLists.txt  bitop_tests.cpp  container_tests.cpp  crypto_tests.cpp  cuda_imgop_tests.cpp  fileop_tests.cpp  imgloader_tests.cpp  imgop_tests.cpp  math_tests.cpp  parser_tests.cpp  pnmdata.hpp  simdop_tests.cpp  stresstest_tests.cpp  stringop_tests.cpp  test_main.cpp  unit_tests.cmake  utility_tests.cpp  vecmath_tests.cpp
tests/fileop_files/: 3g2.3g2  3gp.3gp  7z.7z  aiff.aiff  ape.ape  avi.avi  bz2.tar.bz2  caf.caf  f4v.f4v  flac.flac  flif.flif  flv.flv  lz.tar.lz  mkv.mkv  ofr.ofr  pam.pam  pbm.pbm  pbm_ascii.pbm  pgm.pgm  pgm_ascii.pgm  ppm.ppm  ppm_ascii.ppm  psb.psb  psd.psd  random.random  rar4.rar  rar5.rar  tar.tar  tga.tga  tiff.tiff  tta.tta  webm.webm  wv.wv  xml.xml  xz.tar.xz  zst.tar.zst
tests/imgload_files/: base.rawpix  base_uneven.rawpix  tga_color555_compress.tga  tga_color555_nocompress.tga  tga_color_compress.tga  tga_color_nocompress.tga  tga_colora_compress.tga  tga_colora_nocompress.tga
tests/parser_files/: test_audiocue_multifile.cue  test_audiocue_single.cue  test_audiocue_utf8.cue  test_config.comf
